--- a/index.html
+++ b/index.html
@@ -8,12 +8,45 @@
   </head>
   <body>
     <div class="container">
-      <div class="child1">ch1</div>
-      <div class="child2">ch2</div>
-      <div class="child3">ch3</div>
-      <div class="child4">ch4</div>
-      <div class="child5">ch5</div>
-      <div class="child6">ch6</div>
+      <div class="child1">
+        <div class="header">
+          <img class="star" src="./star-svgrepo-com.svg" />
+          <h1 class="title">...</h1>
+        </div>
+        <div class="imgcover">
+          <div class="imgdiv">1</div>
+        </div>
+      </div>
+      <div class="child2">
+        <div class="header">
+          <img class="star" src="./star-svgrepo-com.svg" />
+          <h1 class="title">...</h1>
+        </div>
+      </div>
+      <div class="child3">
+        <div class="header">
+          <img class="star" src="./star-svgrepo-com.svg" />
+          <h1 class="title">...</h1>
+        </div>
+      </div>
+      <div class="child4">
+        <div class="header">
+          <img class="star" src="./star-svgrepo-com.svg" />
+          <h1 class="title">...</h1>
+        </div>
+      </div>
+      <div class="child5">
+        <div class="header">
+          <img class="star" src="./star-svgrepo-com.svg" />
+          <h1 class="title">...</h1>
+        </div>
+      </div>
+      <div class="child6">
+        <div class="header">
+          <img class="star" src="./star-svgrepo-com.svg" />
+          <h1 class="title">...</h1>
+        </div>
+      </div>
     </div>
   </body>
 </html>
