--- a/index.html
+++ b/index.html
@@ -8,43 +8,15 @@
   </head>
   <body>
     <div class="container">
-      <div class="child1">
+      <div class="child">
         <div class="header">
           <img class="star" src="./star-svgrepo-com.svg" />
           <h1 class="title">...</h1>
         </div>
         <div class="imgcover">
-          <div class="imgdiv">1</div>
-        </div>
-      </div>
-      <div class="child2">
-        <div class="header">
-          <img class="star" src="./star-svgrepo-com.svg" />
-          <h1 class="title">...</h1>
-        </div>
-      </div>
-      <div class="child3">
-        <div class="header">
-          <img class="star" src="./star-svgrepo-com.svg" />
-          <h1 class="title">...</h1>
-        </div>
-      </div>
-      <div class="child4">
-        <div class="header">
-          <img class="star" src="./star-svgrepo-com.svg" />
-          <h1 class="title">...</h1>
-        </div>
-      </div>
-      <div class="child5">
-        <div class="header">
-          <img class="star" src="./star-svgrepo-com.svg" />
-          <h1 class="title">...</h1>
-        </div>
-      </div>
-      <div class="child6">
-        <div class="header">
-          <img class="star" src="./star-svgrepo-com.svg" />
-          <h1 class="title">...</h1>
+          <div class="imgdiv">
+            <img class="acc" src="./account-avatar-head-svgrepo-com.svg" />
+          </div>
         </div>
       </div>
     </div>
