--- a/index.html
+++ b/index.html
@@ -19,6 +19,61 @@
           </div>
         </div>
       </div>
+      <div class="child">
+        <div class="header">
+          <img class="star" src="./star-svgrepo-com.svg" />
+          <h1 class="title">...</h1>
+        </div>
+        <div class="imgcover">
+          <div class="imgdiv">
+            <img class="acc" src="./account-avatar-head-svgrepo-com.svg" />
+          </div>
+        </div>
+      </div>
+      <div class="child">
+        <div class="header">
+          <img class="star" src="./star-svgrepo-com.svg" />
+          <h1 class="title">...</h1>
+        </div>
+        <div class="imgcover">
+          <div class="imgdiv">
+            <img class="acc" src="./account-avatar-head-svgrepo-com.svg" />
+          </div>
+        </div>
+      </div>
+      <div class="child">
+        <div class="header">
+          <img class="star" src="./star-svgrepo-com.svg" />
+          <h1 class="title">...</h1>
+        </div>
+        <div class="imgcover">
+          <div class="imgdiv">
+            <img class="acc" src="./account-avatar-head-svgrepo-com.svg" />
+          </div>
+        </div>
+      </div>
+      <div class="child">
+        <div class="header">
+          <img class="star" src="./star-svgrepo-com.svg" />
+          <h1 class="title">...</h1>
+        </div>
+        <div class="imgcover">
+          <div class="imgdiv">
+            <img class="acc" src="./account-avatar-head-svgrepo-com.svg" />
+          </div>
+        </div>
+      </div>
+      <div class="child">
+        <div class="header">
+          <img class="star" src="./star-svgrepo-com.svg" />
+          <h1 class="title">...</h1>
+        </div>
+        <div class="imgcover">
+          <div class="imgdiv">
+            <img class="acc" src="./account-avatar-head-svgrepo-com.svg" />
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
