font-family and div fixed

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&family=Raleway&family=Roboto:wght@300&family=Rubik:wght@300&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="container">
@@ -18,16 +24,8 @@
             <img class="acc" src="./account-avatar-head-svgrepo-com.svg" />
           </div>
         </div>
-      </div>
-      <div class="child">
-        <div class="header">
-          <img class="star" src="./star-svgrepo-com.svg" />
-          <h1 class="title">...</h1>
-        </div>
-        <div class="imgcover">
-          <div class="imgdiv">
-            <img class="acc" src="./account-avatar-head-svgrepo-com.svg" />
-          </div>
+        <div class="tit">
+          <h3>Add new project +</h3>
         </div>
       </div>
       <div class="child">
@@ -40,16 +38,8 @@
             <img class="acc" src="./account-avatar-head-svgrepo-com.svg" />
           </div>
         </div>
-      </div>
-      <div class="child">
-        <div class="header">
-          <img class="star" src="./star-svgrepo-com.svg" />
-          <h1 class="title">...</h1>
-        </div>
-        <div class="imgcover">
-          <div class="imgdiv">
-            <img class="acc" src="./account-avatar-head-svgrepo-com.svg" />
-          </div>
+        <div class="tit">
+          <h3>Friendly Painter</h3>
         </div>
       </div>
       <div class="child">
@@ -62,6 +52,9 @@
             <img class="acc" src="./account-avatar-head-svgrepo-com.svg" />
           </div>
         </div>
+        <div class="tit">
+          <h3>Dressing Room</h3>
+        </div>
       </div>
       <div class="child">
         <div class="header">
@@ -72,6 +65,37 @@
           <div class="imgdiv">
             <img class="acc" src="./account-avatar-head-svgrepo-com.svg" />
           </div>
+        </div>
+        <div class="tit">
+          <h3>Hedgehogs</h3>
+        </div>
+      </div>
+      <div class="child">
+        <div class="header">
+          <img class="star" src="./star-svgrepo-com.svg" />
+          <h1 class="title">...</h1>
+        </div>
+        <div class="imgcover">
+          <div class="imgdiv">
+            <img class="acc" src="./account-avatar-head-svgrepo-com.svg" />
+          </div>
+        </div>
+        <div class="tit">
+          <h3>Dr.Stefan</h3>
+        </div>
+      </div>
+      <div class="child">
+        <div class="header">
+          <img class="star" src="./star-svgrepo-com.svg" />
+          <h1 class="title">...</h1>
+        </div>
+        <div class="imgcover">
+          <div class="imgdiv">
+            <img class="acc" src="./account-avatar-head-svgrepo-com.svg" />
+          </div>
+        </div>
+        <div class="tit">
+          <h3>Ho, Ho, Ho!</h3>
         </div>
       </div>
     </div>
