--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         <div class="tit">
           <h3>Add new project +</h3>
         </div>
+        <div class="description">
+          <p>Still not enough? Click on a tile to add a new project.</p>
+        </div>
       </div>
       <div class="child">
         <div class="header">
@@ -40,6 +43,9 @@
         </div>
         <div class="tit">
           <h3>Friendly Painter</h3>
+        </div>
+        <div class="description">
+          <p>Within the exercise, we design aroom in a scandinavian style.</p>
         </div>
       </div>
       <div class="child">
@@ -55,6 +61,11 @@
         <div class="tit">
           <h3>Dressing Room</h3>
         </div>
+        <div class="description">
+          <p>
+            Wnderful news! Let's arrange the hosts and guest's dressing rooms!
+          </p>
+        </div>
       </div>
       <div class="child">
         <div class="header">
@@ -68,6 +79,12 @@
         </div>
         <div class="tit">
           <h3>Hedgehogs</h3>
+        </div>
+        <div class="description">
+          <p>
+            These cuties will need a new place where thay can live with their
+            owner.
+          </p>
         </div>
       </div>
       <div class="child">
@@ -83,6 +100,9 @@
         <div class="tit">
           <h3>Dr.Stefan</h3>
         </div>
+        <div class="description">
+          <p>Mr. Doctor needs a new office, let's do something nice!</p>
+        </div>
       </div>
       <div class="child">
         <div class="header">
@@ -96,6 +116,12 @@
         </div>
         <div class="tit">
           <h3>Ho, Ho, Ho!</h3>
+        </div>
+        <div class="description">
+          <p>
+            Christmas is coming! will we try to prepare something for this
+            occasion?
+          </p>
         </div>
       </div>
     </div>
