--- a/LoginPage.html
+++ b/LoginPage.html
@@ -12,6 +12,9 @@
        <img class="img-responsive" src="./account-avatar-head-svgrepo-com.svg"/>
        <input class="genericInput" type="email" placeholder="Email"/>
        <input class="genericInput" type="password" placeholder="Password"/>
+       <img class="eye" src="./eye-solid.svg" alt="show"/>
+<button type="submit" class="btn">LOGIN</button>
+<a href="#">Forgot your password?</a>
     </div>
   </body>
 </html>
