search section has been completed

--- a/cssfigma.html
+++ b/cssfigma.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <div class="container">
+      <!-- Navbar -->
       <div class="navbar">
         <div class="logo">
           <img src="./huoseLogo.svg" alt="logo" />
@@ -30,7 +31,48 @@
           <button type="button" class="genericButton">Login</button>
         </div>
       </div>
-      <div class="header">header</div>
+      <!-- Navbar end -->
+      <div class="header">
+        <div class="headerText">
+          <h1>Find Your Drem House</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint
+            dolorem repellendus quisquam perspiciatis ut architecto iure odit
+            quo, velit autem dolor maxime? Modi a voluptatibus, commodi nulla
+            ullam quas impedit.
+          </p>
+        </div>
+        <div class="searchdiv">
+          <div class="sort1">
+            <p>Location</p>
+            <select class="selectLocation">
+              <option value="1">California</option>
+              <option value="2">Colorado</option>
+              <option value="3">Washington</option>
+              <option value="4" selected>States</option>
+            </select>
+          </div>
+          <div class="sort1">
+            <p>Properties</p>
+            <select class="selectLocation">
+              <option value="1">Delux</option>
+              <option value="2">Luxury</option>
+              <option value="3">Studio</option>
+              <option value="4" selected>Apartments</option>
+            </select>
+          </div>
+          <div class="sort1">
+            <p>Price</p>
+            <select class="selectLocation">
+              <option value="1">$10,000-$12,000</option>
+              <option value="2">$13,000-$15,000</option>
+              <option value="3">$16,000-$20,000</option>
+              <option value="4" selected>$0</option>
+            </select>
+          </div>
+          <div class="searchBtn">Search</div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
