--- a/cssfigma.html
+++ b/cssfigma.html
@@ -32,6 +32,7 @@
         </div>
       </div>
       <!-- Navbar end -->
+      <!-- Header -->
       <div class="header">
         <div class="headerText">
           <h1>Find Your Drem House</h1>
@@ -73,6 +74,21 @@
           <div class="searchBtn">Search</div>
         </div>
       </div>
+      <!-- Header ends -->
+      <!-- About Us -->
+      <div class="aboutUs">
+        <div class="about">
+          <div class="aboutLeft"></div>
+          <div div class="aboutRight">
+            <div class="rightUp">rightUp</div>
+            <div class="rightBtm">
+              <div class="bottomRight">chap</div>
+              <div class="bottomRight">O'ng</div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- About Us ends -->
     </div>
   </body>
 </html>
