--- a/cssfigma.html
+++ b/cssfigma.html
@@ -21,16 +21,16 @@
           Building
         </div>
         <div class="menu">
-          <div class="home">Home</div>
-          <div class="services">Services</div>
-          <div class="about">About Us</div>
-          <div class="properties">Properties</div>
-          <div class="contact">Contact</div>
+          <div class="navMenu">Home</div>
+          <div class="navMenu">Services</div>
+          <div class="navMenu">About Us</div>
+          <div class="navMenu">Properties</div>
+          <div class="navMenu">Contact</div>
+          <button type="navMenu" class="genericButton">Login</button>
         </div>
-        <div class="login">
-          <button type="button" class="genericButton">Login</button>
-        </div>
+        <!-- <div class="login"> -->
       </div>
+      <!-- </div> -->
       <!-- Navbar end -->
       <!-- Header -->
       <div class="header">
