about section started

--- a/cssfigma.html
+++ b/cssfigma.html
@@ -28,9 +28,8 @@
           <div class="navMenu">Contact</div>
           <button type="navMenu" class="genericButton">Login</button>
         </div>
-        <!-- <div class="login"> -->
       </div>
-      <!-- </div> -->
+
       <!-- Navbar end -->
       <!-- Header -->
       <div class="header">
@@ -78,9 +77,19 @@
       <!-- About Us -->
       <div class="aboutUs">
         <div class="about">
-          <div class="aboutLeft"></div>
+          <div class="aboutLeft">
+            <div class="leftMini"></div>
+          </div>
           <div div class="aboutRight">
-            <div class="rightUp">rightUp</div>
+            <p>About Us</p>
+            <div class="rightUp">
+              <br />
+              <h1>We are Specializing in interior Improvments</h1>
+              <br />
+              <br />
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut
+              viverra posuere sem purus enim eleifend habitant arcu, sed.
+            </div>
             <div class="rightBtm">
               <div class="bottomRight">chap</div>
               <div class="bottomRight">O'ng</div>
