about us section is done

--- a/cssfigma.html
+++ b/cssfigma.html
@@ -26,7 +26,7 @@
           <div class="navMenu">About Us</div>
           <div class="navMenu">Properties</div>
           <div class="navMenu">Contact</div>
-          <button type="navMenu" class="genericButton">Login</button>
+          <button type="submit" class="genericButton">Login</button>
         </div>
       </div>
 
@@ -91,8 +91,19 @@
               viverra posuere sem purus enim eleifend habitant arcu, sed.
             </div>
             <div class="rightBtm">
-              <div class="bottomRight">chap</div>
-              <div class="bottomRight">O'ng</div>
+              <div class="bottomRight">
+                <img id="supportsvg" src="./support 1.svg" alt="Support svg" />
+                <h3>Free Consulatation</h5>
+                    <h6>Lorem ipsum dolor sit amet, conse
+                       ctetur adipiscing elit.</h6>
+                 <button type="button" id="cons" class="genericButton">Explore Now</button>
+              </div>
+              <div class="bottomRight">
+                <img id="spt" src="./team 1.svg" alt="Team svg">
+                <h3>Best Team Members</h3>
+                <h6>Lorem ipsum dolor sit amet, conse
+                       ctetur adipiscing elit.</h6>
+              </div>
             </div>
           </div>
         </div>
