looking for section started

--- a/cssfigma.html
+++ b/cssfigma.html
@@ -109,6 +109,14 @@
         </div>
       </div>
       <!-- About Us ends -->
+      <!-- What r u looking for start -->
+      <div class="lookingFor">
+             <h1>What are you looking for?</h1>
+             <div class="lookingforInfo">
+                wddfkg
+             </div>
+      </div>
+      <!-- what r u looking for end -->
     </div>
   </body>
 </html>
