looking for sectoin working

--- a/cssfigma.html
+++ b/cssfigma.html
@@ -92,7 +92,7 @@
             </div>
             <div class="rightBtm">
               <div class="bottomRight">
-                <img id="supportsvg" src="./support 1.svg" alt="Support svg" />
+                <img class="supportsvg" src="./support 1.svg" alt="Support svg" />
                 <h3>Free Consulatation</h5>
                     <h6>Lorem ipsum dolor sit amet, conse
                        ctetur adipiscing elit.</h6>
@@ -113,7 +113,26 @@
       <div class="lookingFor">
              <h1>What are you looking for?</h1>
              <div class="lookingforInfo">
-                wddfkg
+                <div class="lookLeft"></div>
+                <div class="lookRight">
+                    <div class="houseInfo">
+                        <img class="supportsvg" src="./FamilyHouse.svg" alt="Family House">
+                       <div class="innerLooking">wffefe</div>
+                    </div>
+                    <div class="houseInfo">
+                        <img class="supportsvg" src="./Apartments.svg" alt="Apartments">
+                        <div class="innerLooking">wffefe</div>
+                    </div>
+                    <div class="houseInfo">
+                        <img class="supportsvg" src="./StudioApt.svg" alt="Studio">
+                        <div class="innerLooking">wffefe</div>
+                    </div>
+                    <div class="houseInfo">
+                        <img class="supportsvg" src="./Villa.svg" alt="Villa">
+                        <div class="innerLooking">wffefe</div>
+                    </div>
+
+                </div>
              </div>
       </div>
       <!-- what r u looking for end -->
