popular places section started

--- a/cssfigma.html
+++ b/cssfigma.html
@@ -92,17 +92,25 @@
             </div>
             <div class="rightBtm">
               <div class="bottomRight">
-                <img class="supportsvg" src="./support 1.svg" alt="Support svg" />
-                <h3>Free Consulatation</h5>
-                    <h6>Lorem ipsum dolor sit amet, conse
-                       ctetur adipiscing elit.</h6>
-                 <button type="button" id="cons" class="genericButton">Explore Now</button>
+                <img
+                  class="supportsvg"
+                  src="./support 1.svg"
+                  alt="Support svg"
+                />
+                <h5>Free Consulatation</h5>
+                <h6>
+                  Lorem ipsum dolor sit amet, conse ctetur adipiscing elit.
+                </h6>
+                <button type="button" id="cons" class="genericButton">
+                  Explore Now
+                </button>
               </div>
               <div class="bottomRight">
-                <img id="spt" src="./team 1.svg" alt="Team svg">
-                <h3>Best Team Members</h3>
-                <h6>Lorem ipsum dolor sit amet, conse
-                       ctetur adipiscing elit.</h6>
+                <img id="spt" src="./team 1.svg" alt="Team svg" />
+                <h5>Best Team Members</h5>
+                <h6>
+                  Lorem ipsum dolor sit amet, conse ctetur adipiscing elit.
+                </h6>
               </div>
             </div>
           </div>
@@ -111,31 +119,65 @@
       <!-- About Us ends -->
       <!-- What r u looking for start -->
       <div class="lookingFor">
-             <h1>What are you looking for?</h1>
-             <div class="lookingforInfo">
-                <div class="lookLeft"></div>
-                <div class="lookRight">
-                    <div class="houseInfo">
-                        <img class="supportsvg" src="./FamilyHouse.svg" alt="Family House">
-                       <div class="innerLooking">wffefe</div>
-                    </div>
-                    <div class="houseInfo">
-                        <img class="supportsvg" src="./Apartments.svg" alt="Apartments">
-                        <div class="innerLooking">wffefe</div>
-                    </div>
-                    <div class="houseInfo">
-                        <img class="supportsvg" src="./StudioApt.svg" alt="Studio">
-                        <div class="innerLooking">wffefe</div>
-                    </div>
-                    <div class="houseInfo">
-                        <img class="supportsvg" src="./Villa.svg" alt="Villa">
-                        <div class="innerLooking">wffefe</div>
-                    </div>
-
-                </div>
-             </div>
+        <h1>What are you looking for?</h1>
+        <div class="lookingforInfo">
+          <div class="lookLeft"></div>
+          <div class="lookRight">
+            <div class="houseInfo">
+              <img
+                class="supportsvg"
+                src="./FamilyHouse.svg"
+                alt="Family House"
+              />
+              <div class="innerLooking">
+                <h5>Family House</h5>
+                <h6>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. In
+                  tempor pulvinar at augue vestibulum euismod risus
+                </h6>
+              </div>
+            </div>
+            <div class="houseInfo">
+              <img class="supportsvg" src="./Apartments.svg" alt="Apartments" />
+              <div class="innerLooking">
+                <h5>Apartment</h5>
+                <h6>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. In
+                  tempor pulvinar at augue vestibulum euismod risus
+                </h6>
+              </div>
+            </div>
+            <div class="houseInfo">
+              <img class="supportsvg" src="./StudioApt.svg" alt="Studio" />
+              <div class="innerLooking">
+                <h5>Studio & Offices</h5>
+                <h6>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. In
+                  tempor pulvinar at augue vestibulum euismod risus
+                </h6>
+              </div>
+            </div>
+            <div class="houseInfo">
+              <img class="supportsvg" src="./Villa.svg" alt="Villa" />
+              <div class="innerLooking">
+                <h5>Villa & Condo</h5>
+                <h6>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. In
+                  tempor pulvinar at augue vestibulum euismod risus
+                </h6>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
       <!-- what r u looking for end -->
+      <!-- Most Popular Places started -->
+      <div class="popularPlaces">
+        <h1>Most Popular Places</h1>
+        <br />
+        <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h6>
+      </div>
+      <!-- Most Popular Places ended -->
     </div>
   </body>
 </html>
