--- a/cssfigma.html
+++ b/cssfigma.html
@@ -176,6 +176,23 @@
         <h1>Most Popular Places</h1>
         <br />
         <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h6>
+        <div class="cities">
+          <div class="citiesLeft"></div>
+          <div class="citiesRight">
+            <div class="top">
+              <div id="japan" class="ctyinfo">
+                <div class="blur">
+                  <h5>Japan</h5>
+                </div>
+              </div>
+              <div id="malasia" class="ctyinfo"></div>
+            </div>
+            <div class="btm">
+              <div id="london" class="ctyinfo"></div>
+              <div id="india" class="ctyinfo"></div>
+            </div>
+          </div>
+        </div>
       </div>
       <!-- Most Popular Places ended -->
     </div>
