--- a/cssfigma.html
+++ b/cssfigma.html
@@ -177,19 +177,40 @@
         <br />
         <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h6>
         <div class="cities">
-          <div class="citiesLeft"></div>
+          <div class="citiesLeft">
+            <div id="bangladesh" class="blur">
+              <h5 style="font-size: 18px">Bangladesh</h5>
+              <h6>50 Properties</h6>
+            </div>
+          </div>
           <div class="citiesRight">
             <div class="top">
               <div id="japan" class="ctyinfo">
                 <div class="blur">
-                  <h5>Japan</h5>
+                  <h5 style="font-size: 18px">Japan</h5>
+                  <h6>50 Properties</h6>
                 </div>
               </div>
-              <div id="malasia" class="ctyinfo"></div>
+              <div id="malasia" class="ctyinfo">
+                <div class="blur">
+                  <h5 style="font-size: 18px">Malasia</h5>
+                  <h6>50 Properties</h6>
+                </div>
+              </div>
             </div>
             <div class="btm">
-              <div id="london" class="ctyinfo"></div>
-              <div id="india" class="ctyinfo"></div>
+              <div id="london" class="ctyinfo">
+                <div class="blur">
+                  <h5 style="font-size: 18px">England</h5>
+                  <h6>50 Properties</h6>
+                </div>
+              </div>
+              <div id="india" class="ctyinfo">
+                <div class="blur">
+                  <h5 style="font-size: 18px">India</h5>
+                  <h6>50 Properties</h6>
+                </div>
+              </div>
             </div>
           </div>
         </div>
