--- a/cssfigma.html
+++ b/cssfigma.html
@@ -216,6 +216,29 @@
         </div>
       </div>
       <!-- Most Popular Places ended -->
+      <!-- Why choose us started -->
+      <div class="whyChoose">
+        <h1>Who Choose Us?</h1>
+        <br />
+        <br />
+        <h5 style="width: 50%">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Odio laoreet
+          sit neque sagittis. Gravida viverra at auctor sed aliquam. Sed magna
+          eros lectus amet, viverra. Ultrices diam, volutpat sit ut feugiat
+          semper interdum dapibus. Et malesuada tempus lacus at ornare gravida
+          ornare nulla dui. Velit tellus elit consectetur dui vel convallis eu
+          in lectus. Vitae id est, suspendisse suspendisse.
+        </h5>
+        <br /><br />
+        <div id="read" class="genericButton">Read More ></div>
+        <div class="team">
+          <img src="./whyChooseUs.png" alt="Team svg" class="team" />
+        </div>
+      </div>
+      <!-- Why choose us ended -->
+      <!-- What People says -->
+      <div class="peopleContainer">hey</div>
+      <!-- what people says end -->
     </div>
   </body>
 </html>
