--- a/cssfigma.html
+++ b/cssfigma.html
@@ -237,7 +237,15 @@
       </div>
       <!-- Why choose us ended -->
       <!-- What People says -->
-      <div class="peopleContainer">hey</div>
+      <div class="peopleContainer">
+        <h1>What People Say</h1>
+        <h5>Lorem ipsum dolor sit amet consectetur.</h5>
+        <div class="feedback">
+          <div class="feedbackCArd">1</div>
+          <div class="feedbackCArd">1</div>
+          <div class="feedbackCArd">1</div>
+        </div>
+      </div>
       <!-- what people says end -->
     </div>
   </body>
