what people say added

--- a/cssfigma.html
+++ b/cssfigma.html
@@ -241,9 +241,66 @@
         <h1>What People Say</h1>
         <h5>Lorem ipsum dolor sit amet consectetur.</h5>
         <div class="feedback">
-          <div class="feedbackCArd">1</div>
-          <div class="feedbackCArd">1</div>
-          <div class="feedbackCArd">1</div>
+          <div class="feedbackCard">
+            <div class="imeg">
+              <img
+                class="imgs"
+                src="./photos/Ellipse 1131.png"
+                alt=" User has no photos"
+              />
+            </div>
+            <br />
+            <h4>Williamsons</h4>
+            <br />
+            <img class="star" src="./photos/3 sars.png" alt="" />
+            <br />
+            <h6>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Dui
+              posuere nulla id feugiat morbi dictum. Nec enim mauris velit
+              integer. Vitae varius interdum enim eget elementum. Eu velit
+              tortor proin risus amet habitant.
+            </h6>
+          </div>
+          <div class="feedbackCard">
+            <div class="imeg">
+              <img
+                class="imgs"
+                src="./photos/Ellipse 1132.png"
+                alt=" User has no photos"
+              />
+            </div>
+            <br />
+            <h4>Farhad Reja</h4>
+            <br />
+            <img class="star" src="./photos/4stars.png" alt="" />
+            <br />
+            <h6>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Dui
+              posuere nulla id feugiat morbi dictum. Nec enim mauris velit
+              integer. Vitae varius interdum enim eget elementum. Eu velit
+              tortor proin risus amet habitant.
+            </h6>
+          </div>
+          <div class="feedbackCard">
+            <div class="imeg">
+              <img
+                class="imgs"
+                src="./photos/Ellipse 1133.png"
+                alt=" User has no photos"
+              />
+            </div>
+            <br />
+            <h4>Peter Sams</h4>
+            <br />
+            <img class="star" src="./photos/5stars.png" alt="" />
+            <br />
+            <h6>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Dui
+              posuere nulla id feugiat morbi dictum. Nec enim mauris velit
+              integer. Vitae varius interdum enim eget elementum. Eu velit
+              tortor proin risus amet habitant.
+            </h6>
+          </div>
         </div>
       </div>
       <!-- what people says end -->
