footer is started

--- a/cssfigma.html
+++ b/cssfigma.html
@@ -304,6 +304,24 @@
         </div>
       </div>
       <!-- what people says end -->
+      <!-- Footer started -->
+      <div class="Footer">
+        <div class="footerTop">
+          <div class="subscribe">
+            <h1>For Daily Updates Subscribe Now</h1>
+            <input type="text" placeholder="Enter your email address" />
+            <button class="subbtn">Subscribe</button>
+          </div>
+        </div>
+        <div class="footerBottom">
+          <div class="chld1">1</div>
+          <div class="chld2">2</div>
+          <div class="chld2">3</div>
+          <div class="chld2">4</div>
+          <div class="chld2">5</div>
+        </div>
+      </div>
+      <!-- Footer ended -->
     </div>
   </body>
 </html>
