first figma css based project finished

--- a/cssfigma.html
+++ b/cssfigma.html
@@ -314,11 +314,71 @@
           </div>
         </div>
         <div class="footerBottom">
-          <div class="chld1">1</div>
-          <div class="chld2">2</div>
-          <div class="chld2">3</div>
-          <div class="chld2">4</div>
-          <div class="chld2">5</div>
+          <div class="chld1">
+            <div class="icon">
+              <img src="./huoseLogo.svg" alt="logo" />
+              Building
+            </div>
+            <h6>
+              Lorem ipsum dolor sit amet, consectet adipiscing elit. Quam turpis
+              sed ut fam tortor pharetra. Lorem auctor congue pellentesque
+              facilisis diam
+            </h6>
+            <div class="icon" id="icon">
+              <a href="www.facebook.com" target="_blank" title="Facebook"
+                ><img src="./photos/facebook.png" alt="Facebook"
+              /></a>
+              <a href="www.twitter.com" target="_blank" title="Twitter"
+                ><img src="./photos/twitter.png" alt="Twitter"
+              /></a>
+              <a href="www.instagram.com" target="_blank" title="Instagram"
+                ><img src="./photos/instagram.png" alt="Instagram"
+              /></a>
+              <a href="www.linkedin.com" target="_blank" title="LinkedIn"
+                ><img src="./photos/In.png" alt=""
+              /></a>
+            </div>
+          </div>
+          <div class="chld2">
+            <h4>Home</h4>
+            <br />
+            <h6>Process</h6>
+            <h6>Listing</h6>
+            <h6>Popular Property</h6>
+            <h6>Out Agents</h6>
+            <h6>Testimonials</h6>
+          </div>
+          <div class="chld2">
+            <h4>Services</h4>
+            <br />
+            <h6>Site Map</h6>
+            <h6>Property Type</h6>
+            <h6>Terms and Conditions</h6>
+            <h6>Privacy Policy</h6>
+          </div>
+          <div class="chld2">
+            <h4>About</h4>
+            <br />
+            <h6>About Us</h6>
+            <h6>Who Choose Us?</h6>
+            <h6>Events</h6>
+            <h6>Blog</h6>
+          </div>
+          <div class="chld2" id="lschd">
+            <h4>Contact</h4>
+            <br />
+            <a href="tel:+15085248965"
+              ><img src="./photos/phone.png" alt="phone" /> +15085248965</a
+            >
+            <a href="www.gmail.com"
+              ><img src="./photos/google.png" alt="gmail" />
+              kayumov@gmail.com</a
+            >
+            <a href="www.googleplay.com"
+              ><img src="./photos/playstore 1.png" alt="playstore" /> Google
+              Play</a
+            >
+          </div>
         </div>
       </div>
       <!-- Footer ended -->
